# ros-lidar-avoidance

./: CMakeLists.txt  package.xml
include/: laserscan_avoidance_activity.h
include/avoidance/: LaserScanAvoidanceActivity.hpp
src/: LaserScanAvoidanceActivity.cpp  laserscan_avoidance_activity.cpp  laserscan_avoidance_node.cpp
